--- a/index.htm
+++ b/index.htm
@@ -237,8 +237,8 @@ upgrades to help you automatically kill more Zombies!</p>
             <span class="icon fa-code"></span>
             <h2><strong>free</strong> and <strong>Open Source</strong> Software too!</h2>
             <p>
-                We strongly believe in giving back to the <strong>awesome</strong> software development community that has helped me so very much over the years.<br>
-                In addition to speaking and <a href="http://buildazure.com/">blogging</a> these efforts have included creating and maintaining a few <strong>Open Source</strong> developer tools over the years.<br>
+                We strongly believe in giving back to the <strong>awesome</strong> software development community that has helped me so very much over the years.
+                In addition to speaking and <a href="http://buildazure.com/">blogging</a> these efforts have included creating and maintaining a few <strong>Open Source</strong> developer tools over the years.
                 Feel free to use what you like from these projects, and leave the rest.
             </p>
             <p></p>
