--- a/index.htm
+++ b/index.htm
@@ -93,7 +93,7 @@
             <!--<h2>Mapping is at the <span class="icon fa-heart"><span class="label">Mapping</span></span> of Simplovation</h2>-->
             <h2>Simpl<span style="color: #aaa;">icity</span> + <span style="color: #aaa;">Inn</span>ovation = Simplovation</h2>
             <p>
-                Since the birth of Simplovation in September 2007, <em>Simplivity + Innovation</em> has been at our core and in our heart. We started with the launch of the Web.Maps.VE developer tool that was a true innovation for ASP.NET developers implementing Bing Maps functionality in their applications.
+                Since the birth of Simplovation in September 2007, <em>Simplivity + Innovation</em> has been at our core and in our heart. We started with the launch of the Web.Maps.VE developer tool (the industries only Bing Maps ASP.NET AJAX server control) that was a true innovation for ASP.NET developers implementing Bing Maps functionality in their applications.
                 These early beginnings of <em>Simplicity + Innovation</em> run through the core of what Simplovation represents and how <strong>we build software and solutions used by MILLIONS of people around the globe</strong>.
             </p>
         </header>
@@ -301,6 +301,7 @@ Home, Office, School, Airport, Hotel, Fishing and many more!
             </div>
         </section>
 
+        <!--
         <section class="wrapper style2 container special-alt">
             <div class="row half">
                 <div class="8u">
@@ -331,6 +332,7 @@ implementing mapping has be abstracted away for you automatically. Using
                 </div>
             </div>
         </section>
+        -->
 </article>
     
 
