--- a/index.htm
+++ b/index.htm
@@ -338,7 +338,7 @@ implementing mapping has be abstracted away for you automatically. Using
 
     <!-- Footer -->
     <footer id="footer">
-        <span class="copyright">Copyright 2020 © Simplovation LLC. All rights reserved. Design: <a href="http://html5up.net/">HTML5 UP</a>.</span>
+        <span class="copyright">Copyright 2007 - 2020 © Simplovation LLC. All rights reserved.<!--Design: <a href="http://html5up.net/">HTML5 UP</a>.</span>-->
     </footer>
 
     <script>
