--- a/index.htm
+++ b/index.htm
@@ -108,19 +108,18 @@
             <p>
                 I still maintain Simplovation, but I don't do many new projects with Simplovation currently.
                 My primary focus has shifted away from Bing Maps and over to Cloud computing with Microsoft Azure.
-                You can find me blogging regularly at <a href="http://buildazure.com">BuildAzure.com</a> and on Twitter at <a href="http://twitter.com/BuildAzure">@BuildAzure</a> and <a href="http://twitter.com/crpietschmann">@crpietschmann</a>.
+                You can find me blogging regularly at <a href="https://build5nines.com">Build5Nines.com</a> and on Twitter at <a href="http://twitter.com/Build5Nines">@Build5Nines</a> and <a href="http://twitter.com/crpietschmann">@crpietschmann</a>.
             </p>
         </header>
         <footer>
             <ul class="buttons">
-                <li><a href="http://BuildAzure.com/contact" class="button special">Contact Me</a></li>
-                <li><a href="http://twitter.com/BuildAzure" class="button">Tweet Me</a></li>
+                <li><a href="https://build5nines.com/contact" class="button special">Contact Me</a></li>
+                <li><a href="http://twitter.com/Build5Nines" class="button">Tweet Me</a></li>
             </ul>
         </footer>
     </section>
     <p></p>
     -->
-
     <!--
         <header class="special container" id="Windows8">
             <span class="icon fa-windows"></span>
@@ -132,14 +131,11 @@
                 The Windows Store is an <strong>exciting</strong> platform to develop apps for. It combines the ubiquitous Windows platform with unparalleled ease of the <em>"app store"</em> distribution and monetization model.
             </p>
         </header>
-
         <a href="#" id="Win8Health"></a>
         <section class="wrapper style3 container special">
-
             <header class="major">
                 <h2>Health and Fitness</h2>
             </header>
-
             <div class="row">
                 <div class="6u">
 
@@ -238,7 +234,7 @@ upgrades to help you automatically kill more Zombies!</p>
             <h2><strong>free</strong> and <strong>Open Source</strong> Software too!</h2>
             <p>
                 We strongly believe in giving back to the <strong>awesome</strong> software development community that has helped me so very much over the years.
-                In addition to speaking and <a href="http://buildazure.com/">blogging</a> these efforts have included creating and maintaining a few <strong>Open Source</strong> developer tools over the years.
+                In addition to speaking and <a href="https://build5nines.com/">blogging</a> these efforts have included creating and maintaining a few <strong>Open Source</strong> developer tools over the years.
                 Feel free to use what you like from these projects, and leave the rest.
             </p>
             <p></p>
